# snowflake-connector-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  mise.toml  rust-toolchain.toml
.github/workflows/: integration.yml  test.yml
benches/: result_table.rs
derive/: Cargo.toml
derive/src/: attrs.rs  codegen.rs  input.rs  lib.rs  naming.rs
examples/: derive_from_row.rs  dynamic_rows.rs  error_handling.rs  external_browser_sso.rs  external_browser_sso_without_callback_listener.rs  hand_written_decode.rs  query_cancel.rs  statement_bind.rs
src/: api_context.rs  auth.rs  bench_support.rs  bind.rs  cancellation.rs  chunk.rs  client.rs  config.rs  decode.rs  error.rs  external_browser_config.rs  external_browser_launcher.rs  external_browser_listener.rs  external_browser_payload.rs  lib.rs  query.rs  row.rs  runtime.rs  session.rs  types.rs
src/auth/: api.rs  client.rs  config.rs  credential.rs  external_browser.rs  key_pair.rs  login.rs  mod.rs
src/auth/external_browser/: config.rs  flow.rs  launcher.rs  listener.rs  manual_input_unix.rs  manual_redirect_input.rs  mod.rs  payload.rs
src/auth/external_browser/listener/: handler.rs  runtime.rs  server.rs
src/auth/wire/: authenticator_request.rs  authenticator_response.rs  login_request.rs  login_response.rs  mod.rs
src/chunk/: downloader.rs  mod.rs
src/error/: decode.rs  display.rs  parse.rs  query_scoped.rs  repr.rs  schema.rs
src/external_browser_listener/: handler.rs  runtime.rs
src/query/: capability.rs  chunk_downloader.rs  expiry.rs  mod.rs  partition_source.rs  refresh.rs  request.rs  response.rs  result_set.rs  snapshot.rs  statement.rs  test_server.rs
src/query_result/: collect.rs  lease.rs  mod.rs  partition_source.rs  result_set.rs  snapshot.rs  typed_result_set.rs
src/result/: cell.rs  decode.rs  dynamic.rs  mod.rs  plan.rs  result_table.rs  row.rs  schema.rs  typed_result_table.rs
src/result_cursor/: collect.rs  cursor.rs  mod.rs  model.rs  partition.rs  partition_source.rs  remote.rs  remote_partition_downloader.rs  snapshot.rs  typed_cursor.rs
src/result_cursor/remote/: downloader.rs
src/result_table/: cell.rs  decode.rs  dynamic.rs  mod.rs  plan.rs  row.rs  schema.rs  table.rs  typed_table.rs
src/rowset/: gzip.rs  json_string.rs  mod.rs  parser.rs  workload.rs
src/session/: mod.rs
src/statement/: api.rs  bind.rs  builder.rs  cancel.rs  client.rs  executor.rs  handle.rs  manifest.rs  mod.rs  raw.rs  response.rs
src/statement/api/: abort.rs  deadline.rs  poll.rs  submit.rs  test_support.rs
src/statement/wire/: request.rs  response.rs
src/test_support/: http.rs  mod.rs
tests/: auto_trait_trybuild.rs  common.rs  derive_trybuild.rs  fixtures.rs  integration.rs  test-async.rs  test-basic-operations.rs  test-bind-parameters.rs  test-chunk.rs  test-decode.rs  test-select.rs  test-session-parameters.rs
tests/auto_trait_compile_fail/: typed_collect_local_row_future_not_send.rs  typed_collect_local_row_future_not_send.stderr  typed_collect_with_options_local_row_future_not_send.rs  typed_collect_with_options_local_row_future_not_send.stderr
tests/auto_trait_compile_pass/: public_async_send_futures.rs  typed_collect_send_row_future.rs  typed_cursor_local_row_allowed.rs
tests/cases/: common.rs  mod.rs  test_async.rs  test_basic_operations.rs  test_bind_parameters.rs  test_chunk.rs  test_column_metadata.rs  test_decode.rs  test_derive.rs  test_query_cancel.rs  test_query_id.rs  test_session_parameters.rs
tests/derive_compile_fail/: by_position_with_rename_all.rs  by_position_with_rename_all.stderr  by_position_with_rename_all_none.rs  by_position_with_rename_all_none.stderr  duplicate_crate.rs  duplicate_crate.stderr  duplicate_default.rs  duplicate_default.stderr  duplicate_positional.rs  duplicate_positional.stderr  duplicate_rename.rs  duplicate_rename.stderr  duplicate_rename_all.rs  duplicate_rename_all.stderr  empty_crate_path.rs  empty_crate_path.stderr  empty_named_struct_rejected.rs  empty_named_struct_rejected.stderr  empty_tuple_struct_rejected.rs  empty_tuple_struct_rejected.stderr  enum_rejected.rs  enum_rejected.stderr  field_by_position_rejected.rs  field_by_position_rejected.stderr  field_by_position_with_rename_all.rs  field_by_position_with_rename_all.stderr  field_positional_rejected.rs  field_positional_rejected.stderr  generic_struct_rejected.rs  generic_struct_rejected.stderr  invalid_crate_path.rs  invalid_crate_path.stderr  lifetime_struct_rejected.rs  lifetime_struct_rejected.stderr  phantom_data_rejected.rs  phantom_data_rejected.stderr  positional_with_field_rename.rs  positional_with_field_rename.stderr  positional_with_rename_all.rs  positional_with_rename_all.stderr  (+16 more)
tests/derive_compile_pass/: crate_path_alias.rs  helper_name_collision.rs  pub_crate_alias.rs  pub_crate_struct.rs  pub_module_model.rs  pub_named_struct.rs  pub_positional_struct.rs  pub_tuple_struct.rs  rename_all_none.rs
tests/fixtures/: test_snowflake_key.p8  test_snowflake_key_unencrypted.p8
