[package]
name = "snowflake-connector-rs"
repository = "https://github.com/estie-inc/snowflake-connector-rs"
version = "0.9.0"

authors = [
    "kenkoooo <kenkou.n@gmail.com>",
]
description = "A Rust client for Snowflake"
edition = "2024"
keywords = [
    "client",
    "database",
    "snowflake",
    "sql",
]
license = "MIT"
readme = "README.md"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
flate2 = "1.1"
http = "1.4"
jsonwebtoken = { version = "10.3.0", features = [
    "rust_crypto",
] }
pkcs8 = { version = "0.10", features = [
    "encryption",
    "pem",
    "pkcs5",
] }
reqwest = { version = "0.13", features = [
    "gzip",
    "json",
    "query",
    "rustls",
], default-features = false }
rsa = "0.9"
serde = { version = "1.0", features = [
    "derive",
] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
tokio = { version = "1.52", features = [
    "rt",
    "time",
] }
url = "2.5"
uuid = { version = "1.23", features = [
    "v4",
] }

http-body-util = { version = "0.1", optional = true }
hyper = { version = "1.9", features = [
    "http1",
    "server",
], optional = true }
hyper-util = { version = "0.1", features = [
    "http1",
    "server",
    "tokio",
], optional = true }
indexmap = { version = "2.14", optional = true }
nix = { version = "0.31", optional = true, features = [
    "term",
] }
shell-words = { version = "1.1", optional = true }
socket2 = { version = "0.6", optional = true }

[features]
external-browser-sso = [
    "dep:http-body-util",
    "dep:hyper",
    "dep:hyper-util",
    "dep:indexmap",
    "dep:nix",
    "dep:shell-words",
    "dep:socket2",
    "tokio/macros",
    "tokio/net",
    "tokio/sync",
    "tokio/time",
]
pkcs8-3des = [
    "pkcs8/3des",
]
pkcs8-des = [
    "pkcs8/des-insecure",
]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
tokio = { version = "1.52", features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }

[[example]]
name = "external_browser_sso"
required-features = [
    "external-browser-sso",
]

[[example]]
name = "external_browser_sso_without_callback_listener"
required-features = [
    "external-browser-sso",
]
