[package]
name = "snowflake-connector-rs"
repository = "https://github.com/estie-inc/snowflake-connector-rs"
version = "0.9.0"

authors = [
    "kenkoooo <kenkou.n@gmail.com>",
]
description = "A Rust client for Snowflake"
edition = "2024"
keywords = [
    "client",
    "database",
    "snowflake",
    "sql",
]
license = "MIT"
readme = "README.md"

[profile.ci]
debug = 0
incremental = false
inherits = "test"

[profile.ci.package."*"]
debug = false

[workspace]
members = [
    "derive",
]

[dependencies]
base64 = "0.22"
bytes = "1.11"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
flate2 = "1.1"
http = "1.4"
indexmap = "2.14"
reqwest = { version = "0.13", default-features = false, features = [
    "gzip",
    "json",
    "query",
    "rustls",
] }
serde = { version = "1.0", features = [
    "derive",
] }
serde_json = { version = "1.0", features = [
    "raw_value",
] }
tokio = { version = "1.52", features = [
    "sync",
    "time",
] }
url = "2.5"
uuid = { version = "1.23", features = [
    "serde",
    "v4",
] }

pkcs8 = { version = "0.10", optional = true, features = [
    "encryption",
    "pem",
] }
rsa = { version = "0.9", optional = true }
sha2 = { version = "0.11", optional = true, default-features = false, features = [
    "alloc",
] }

http-body-util = { version = "0.1", optional = true }
hyper = { version = "1.9", optional = true, features = [
    "http1",
    "server",
] }
hyper-util = { version = "0.1", optional = true, features = [
    "http1",
    "server",
    "tokio",
] }
nix = { version = "0.31", optional = true, features = [
    "term",
] }
socket2 = { version = "0.6", optional = true }

snowflake-connector-rs-derive = { path = "derive", version = "=0.9.0", optional = true }

[features]
default = [
    "derive",
    "key-pair-auth",
]
derive = [
    "dep:snowflake-connector-rs-derive",
]
external-browser-sso = [
    "dep:http-body-util",
    "dep:hyper",
    "dep:hyper-util",
    "dep:nix",
    "dep:socket2",
    "tokio/macros",
    "tokio/net",
    "tokio/sync",
    "tokio/time",
]
key-pair-auth = [
    "dep:pkcs8",
    "dep:rsa",
    "dep:sha2",
]
pkcs8-3des = [
    "key-pair-auth",
    "pkcs8/3des",
]
pkcs8-des = [
    "key-pair-auth",
    "pkcs8/des-insecure",
]

# Internal helpers used by benches and `tests/derive_smoke.rs`. No semver guarantees.
bench-internals = [
]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = [
    "cargo_bench_support",
    "rayon",
] }
tokio = { version = "1.52", features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }
trybuild = "1.0"

[[bench]]
harness = false
name = "result_table"
required-features = [
    "bench-internals",
]

[[example]]
name = "external_browser_sso"
required-features = [
    "external-browser-sso",
]

[[example]]
name = "external_browser_sso_without_callback_listener"
required-features = [
    "external-browser-sso",
]

[[example]]
name = "derive_from_row"
required-features = [
    "derive",
    "external-browser-sso",
]

[[example]]
name = "statement_bind"
required-features = [
    "external-browser-sso",
]
