[package]
name = "snowflake-connector-rs-derive"
repository = "https://github.com/estie-inc/snowflake-connector-rs"
version.workspace = true

authors = [
    "estie-inc",
]
description = "Derive macros for snowflake-connector-rs"
edition = "2024"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [
    "full",
] }
